# toy-gtk

./: README.md  gtk-toy.cabal  toy-gtk.cabal  toyframework.cabal
Graphics/: ToyFramework.hs
Graphics/ToyFramework/: Core.hs
src/Graphics/UI/Gtk/: Toy.hs
src/Graphics/UI/Toy/: Gtk.hs
