Name:                toy-gtk
Version:             0.3.0
Cabal-Version:       >= 1.6
Synopsis:            Convenient gtk canvas with mouse and keyboard input
Category:            Graphics
Description:
  Implements the toy-interface for gtk.  This provides a simple interface for
  creating applications which draw things and interact with the mouse and
  keyboard.  It handles the minutiae of setting up the gtk window and canvas,
  and processes the input events.
  .
  The name \"toy\" comes from the \"toy framework\", a part of the lib2geom
  library (<http://lib2geom.sourceforge.net/>).  It's used in building \"toys\"
  demonstrating the features of the library.  This is a different variety of
  \"TDD\"- but instead of tests, it's toys! We found that building little demos
  to be a nice way to drive initial design / development.
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan at gmail>
Stability:           experimental
Build-Type:          Simple
Source-repository head
  type:              git
  location:          https://github.com/mgsloan/toy-gtk

Library
  Build-Depends:     base >= 4.2 && < 4.7,
                     containers,
                     gtk >= 0.12.0 && < 0.13.0,
                     mtl,
                     toy-interface >= 0.3 && < 0.4
  Hs-source-dirs:    src
  ghc-options:       -Wall -fwarn-tabs -O2
  Exposed-Modules:   Graphics.UI.Toy.Gtk
