Name:                toyframework
Version:             0.0.1
Cabal-Version:       >= 1.2
Synopsis:            
Category:            Math, Graphics, GUI
Description:         
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan@gmail.com>
Stability:           experimental
Build-Type:          Simple

Library
  Extensions:        TypeFamilies, MultiParamTypeClasses, FlexibleInstances, 
                     UndecidableInstances, RankNTypes, TupleSections, ScopedTypeVariables
  Build-Depends:     base, cairo, curve, fclabels, gtk, vector-space, containers
  Exposed-Modules:
    Graphics.ToyFramework
    Graphics.ToyFramework.Core
